syntax = "proto3";

package com.textgeneration;

// Request message matching our Lambda function
message BedrockRequest {
  string input_text = 1;
  map<string, string> parameters = 2;
}

// Response message matching our Lambda function
message BedrockResponse {
  string output_text = 1;
  map<string, float> confidence_scores = 2;
  repeated string tokens = 3;
}